<resources>

    <string name="app_name">Bookie</string>
    <string name="hello_earth">Hello Earth!</string>
    <string name="bookie_splash">bookie_splash</string>
    <string name="bookie">Bookie</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="address_of_residence">Address of residence:</string>
    <string name="telephone_number">Telephone number:</string>
    <string name="placeholder">Placeholder</string>
    <string name="change_data">Change Data</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="log_out">Log Out</string>
    <string name="change_picture_note">Press the profile picture in order to change it.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="reservations">Reservations</string>
    <string name="notifications">Notifications</string>
    <string name="accommodations">Accommodations</string>
    <string name="reported_users">Reported Users</string>
    <string name="reported_comments">Reported Comments</string>
    <string name="unapproved_comments">Unapproved Comments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="egg">egg</string>
    <string name="picture_press_stop">Stop poking me!</string>
    <string name="ok">OK</string>
    <string name="update_basic_info">Update basic info</string>
    <string name="update_telephone_number">Update telephone number</string>
    <string name="update_address_of_residence">Update address of residence</string>
    <string name="update_password">Update password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="approve_this_accommodation">Approve this accommodation</string>
    <string name="send_back_for_revision">Send back for revision</string>
    <string name="accommodation_name">Accommodation name</string>
    <string name="reservation_period">Reservation period</string>
    <string name="search">Search</string>
    <string name="search_reservations_by_status">Search reservations by status:</string>
    <string name="waiting">Waiting</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="cancelled">Cancelled</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accommodation">Accommodation:</string>
    <string name="number_of_guests">Number of guests:</string>
    <string name="from_to">From - To:</string>
    <string name="price">Price:</string>
    <string name="reservee">Reservee:</string>
    <string name="number_of_reservations_cancelled_by_reservee">
        Number of reservations cancelled by reservee:
    </string>
    <string name="status">Status:</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="location">Location</string>
    <string name="guest_count">Guest count</string>
    <string name="date_range">Date range</string>
    <string name="filter">Filter</string>
    <string name="update">Update</string>
    <string name="carousel_image">Carousel image</string>
    <string name="description">Description</string>
    <string name="number_of_guests_min_max">Number of guests (min - max):</string>
    <string name="amenities">Amenities:</string>
    <string name="wifi">WiFi</string>
    <string name="kitchen">Kitchen</string>
    <string name="ac">AC</string>
    <string name="parking">Parking</string>
    <string name="is_reservation_auto_accepted">
        Should reservations for this accommodation be automatically accepted?
    </string>
    <string name="update_accommodation">Update accommodation</string>
    <string name="accommodation_type">Accommodation type:</string>
    <string name="add_image">Add image</string>
    <string name="remove_image">Remove image:</string>
    <string name="delete">Delete</string>
    <string name="comment">Comment:</string>
    <string name="grade">Grade:</string>
    <string name="date">Date:</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="owners">Owners</string>
    <string name="reason">Reason:</string>
    <string name="block_user">Block User</string>
    <string name="content">Content:</string>
    <string name="delete_notification">Delete notification</string>

</resources>