<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HostReservationsScreenFragment">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:flexDirection="column"
        app:flexWrap="nowrap"
        android:paddingHorizontal="10dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/accommodation_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/accommodationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reservation_period">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reservationPeriodInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:longClickable="false"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reservationPeriodButton"
                style="?attr/materialIconButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:icon="@drawable/date_icon"
                tools:ignore="RelativeOverlap,SpeakableTextPresentCheck" />

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:flexDirection="column"
                app:flexWrap="nowrap"
                android:padding="10dp" >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_reservations_by_status"
                    android:textColor="?attr/colorOnSurface" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:flexDirection="row"
                    app:flexWrap="nowrap"
                    app:justifyContent="space_between" >

                    <CheckBox
                        android:id="@+id/waitingCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/waiting"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/acceptedCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accepted"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/declinedCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/declined"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/cancelledCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancelled"
                        android:textSize="12sp" />

                </com.google.android.flexbox.FlexboxLayout>

            </com.google.android.flexbox.FlexboxLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchBtn"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_marginTop="10dp" />

    </com.google.android.flexbox.FlexboxLayout>

</FrameLayout>