<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountChangeScreenFragment">

    <com.google.android.material.card.MaterialCardView
        style="?attr/materialCardViewElevatedStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/profileImageBtn"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/bookie"
                    android:src="@drawable/bookie_final"
                    android:adjustViewBounds="true"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:background="?attr/selectableItemBackground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        app:endIconMode="password_toggle" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_of_residence"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telephone_number"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp" />

                    <com.google.android.flexbox.FlexboxLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:flexDirection="row"
                        app:flexWrap="nowrap"
                        app:justifyContent="space_between"
                        app:alignItems="stretch">

                        <com.google.android.material.button.MaterialButton
                            style="@style/Widget.App.Button"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp"
                            android:text="@string/confirm" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/cancelBtn"
                            style="@style/Widget.App.Button"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:layout_margin="8dp"
                            android:text="@string/cancel" />

                    </com.google.android.flexbox.FlexboxLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>